--- a/web/pom.xml
+++ b/web/pom.xml
@@ -6,13 +6,13 @@
 	<parent>
 		<groupId>org.testeditor.fixture</groupId>
 		<artifactId>parent</artifactId>
-		<version>2.5.3-SNAPSHOT</version>
+		<version>2.5.2</version>
 		<relativePath>../core/org.testeditor.fixture.parent</relativePath>
 	</parent>
 
 	<groupId>org.testeditor.fixture</groupId>
 	<artifactId>web-fixture</artifactId>
-	<version>2.5.2-SNAPSHOT</version>
+	<version>2.5.3-SNAPSHOT</version>
 	<packaging>jar</packaging>
 	<name>${project.groupId}:${project.artifactId}</name>
 	<description>Fixture used for testing WEB applications.</description>
