--- a/web/pom.xml
+++ b/web/pom.xml
@@ -13,7 +13,7 @@
 	
 	<groupId>org.testeditor.fixture</groupId>
 	<artifactId>web-fixture</artifactId>
-	<version>2.5.3-SNAPSHOT</version>
+	<version>2.5.3</version>
 	<packaging>jar</packaging>
 	<name>${project.groupId}:${project.artifactId}</name>
 	<description>Fixture used for testing WEB applications.</description>
