--- a/web/pom.xml
+++ b/web/pom.xml
@@ -6,7 +6,7 @@
 	<parent>
 		<groupId>org.testeditor.fixture</groupId>
 		<artifactId>parent</artifactId>
-		<version>2.5.3-SNAPSHOT</version>
+		<version>2.5.3</version>
 		<relativePath>../core/org.testeditor.fixture.parent</relativePath>
 	</parent>
 
@@ -128,9 +128,14 @@
 			<artifactId>powermock-module-junit4</artifactId>
 		</dependency>
 		<dependency>
-		  <groupId>com.paulhammant</groupId>
-		  <artifactId>ngwebdriver</artifactId>
-		  <version>0.9.5</version>
+			<groupId>com.paulhammant</groupId>
+			<artifactId>ngwebdriver</artifactId>
+			<version>0.9.5</version>
+		</dependency>
+		<dependency>
+			<groupId>io.github.bonigarcia</groupId>
+			<artifactId>webdrivermanager</artifactId>
+			<version>1.4.4</version>
 		</dependency>
 	</dependencies>
 
@@ -154,6 +159,13 @@
 			</plugin>
 		</plugins>
 		<resources>
+			<resource>
+				<targetPath>.</targetPath>
+				<directory>src/main/java/</directory>
+				<includes>
+					<include>script.js</include>
+				</includes>
+			</resource>
 			<resource>
 				<targetPath>org/testeditor/fixture/web</targetPath>
 				<directory>src/main/java/org/testeditor/fixture/web</directory>
