--- a/swing/pom.xml
+++ b/swing/pom.xml
@@ -6,13 +6,13 @@
     <parent>
         <groupId>org.testeditor.fixture</groupId>
         <artifactId>parent</artifactId>
-        <version>2.5.3-SNAPSHOT</version>
+        <version>2.5.4</version>
         <relativePath>../core/org.testeditor.fixture.parent</relativePath>
     </parent>
 
     <groupId>org.testeditor.fixture</groupId>
     <artifactId>swing-fixture</artifactId>
-    <version>2.5.3-SNAPSHOT</version>
+    <version>2.5.4</version>
     <packaging>jar</packaging>
 
     <name>${project.groupId}:${project.artifactId}</name>
