--- a/core/org.testeditor.fixture.core/pom.xml
+++ b/core/org.testeditor.fixture.core/pom.xml
@@ -5,7 +5,7 @@
 	<parent>
 		<groupId>org.testeditor.fixture</groupId>
 		<artifactId>parent</artifactId>
-		<version>2.5.4</version>
+		<version>2.5.5-SNAPSHOT</version>
 		<relativePath>../org.testeditor.fixture.parent</relativePath>
 	</parent>
 
