--- a/core/org.testeditor.fixture.parent/pom.xml
+++ b/core/org.testeditor.fixture.parent/pom.xml
@@ -4,7 +4,7 @@
 
 	<groupId>org.testeditor.fixture</groupId>
 	<artifactId>parent</artifactId>
-	<version>2.5.4</version>
+	<version>2.5.5-SNAPSHOT</version>
 	<packaging>pom</packaging>
 
 	<name>${project.groupId}:${project.artifactId}</name>
