--- a/web/pom.xml
+++ b/web/pom.xml
@@ -7,7 +7,7 @@
 	<parent>
 		<groupId>org.testeditor.fixture</groupId>
 		<artifactId>parent</artifactId>
-		<version>2.5.4</version>
+		<version>2.5.5-SNAPSHOT</version>
 		<relativePath>../core/org.testeditor.fixture.parent</relativePath>
 	</parent>
 	
